--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,7 +52,11 @@ jobs:
           name: Create and Run Test
           command: |
             echo "#!/usr/bin/env bats" > test_script.bats
-            echo "@test 'Check sum' { [ \"$(bash script.sh)\" == 'Sum: 5' ] }" >> test_script.bats
+            echo "@test 'Check sum' {" >> test_script.bats
+            echo "  result=\$(bash script.sh)" >> test_script.bats
+            echo "  [ \"\$result\" = 'Sum: 5' ]" >> test_script.bats
+            echo "}" >> test_script.bats
+            chmod +x test_script.bats
             bats test_script.bats
 
 workflows:
