--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,30 +19,23 @@ jobs:
             export DEBIAN_FRONTEND=noninteractive
             apt-get update && apt-get install -y bash bats git
       - run:
-          name: Create Bash Script
+          name: Create Script
           command: |
-            echo "#!/bin/bash" > script.sh
-            echo "echo \"Sum: $(expr 2 + 3)\"" >> script.sh
-            chmod +x script.sh
+            mkdir -p scripts
+            echo "#!/bin/bash" > scripts/script.sh
+            echo "echo \"Sum: \$((2+3))\"" >> scripts/script.sh
+            chmod +x scripts/script.sh
       - persist_to_workspace:
           root: .
           paths:
-            - script.sh
+            - scripts
 
   test:
     docker:
       - image: ubuntu:latest
     steps:
-      - checkout
       - attach_workspace:
           at: .
-      - run:
-          name: Set Timezone Automatically
-          command: |
-            echo "tzdata tzdata/Areas select America" | debconf-set-selections
-            echo "tzdata tzdata/Zones/America select Bogota" | debconf-set-selections
-            export DEBIAN_FRONTEND=noninteractive
-            apt-get update && apt-get install -y tzdata
       - run:
           name: Install Dependencies
           command: |
@@ -53,7 +46,8 @@ jobs:
           command: |
             echo "#!/usr/bin/env bats" > test_script.bats
             echo "@test 'Check sum' {" >> test_script.bats
-            echo "  result=\$(bash script.sh)" >> test_script.bats
+            echo "  result=\$(bash scripts/script.sh)" >> test_script.bats
+            echo "  echo \"Result from script: \$result\"" >> test_script.bats
             echo "  [ \"\$result\" = 'Sum: 5' ]" >> test_script.bats
             echo "}" >> test_script.bats
             chmod +x test_script.bats
