--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,14 +16,11 @@ jobs:
             echo '#!/bin/bash' > script.sh
             echo 'suma=$((2 + 3))' >> script.sh
             echo 'echo "$suma"' >> script.sh
-            chmod +x script.sh
+            chmod +x script.sh 
       - persist_to_workspace:
           root: .
           paths:
             - script.sh
-#!/bin/bash
-resultado=$((2+3))
-echo "$resultado"
 
   test:
     executor: bash-executor
@@ -43,9 +40,8 @@ echo "$resultado"
           command: |
             echo '#!/usr/bin/env bats' > test_script.bats
             echo "@test 'El resultado del test_scrip.bats es 5' {" >> test_script.bats
-            echo "  result=\$(bash script.sh)" >> test_script.bats
-            echo "  echo \"\$result\"" >> test_script.bats
-            echo "  [ \"\$result\" = 'Sum: 5' ]" >> test_script.bats
+            echo "  result=$(bash script.sh)" >> test_script.bats
+            echo "  [ "$result" = '5' ]" >> test_script.bats
             echo "}" >> test_script.bats
       - run:
           name: Ejecutar test
