--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,8 @@ jobs:
           command: |
             echo '#!/usr/bin/env bats' > test_script.bats
             echo "@test 'El resultado del test_scrip.bats es 5' {" >> test_script.bats
+            echo "  result=\$(bash script.sh)" >> test_script.bats
+            echo "  echo \"Resultado: \$result\"" >> test_script.bats 
             echo "  [ \"\$result\" = '5' ]" >> test_script.bats
             echo "}" >> test_script.bats
       - run:
