--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,8 +29,8 @@ jobs:
       - run:
           name: Ejecutar Build y enviar notificación si falla
           command: |
-            if ! ./script_de_build.sh; then
-              echo "Build fallido en CircleCI" | mail -s "Alerta de Build" anfe-97@hotmail.com
+            if ! ./script.sh; then
+              echo "Ejecución fallada en CircleCI" | mail -s "Alerta de Build" anfe-97@hotmail.com
               exit 1
             fi
       - persist_to_workspace:
