--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
           command: |
             if ! ./script.sh; then
               {
-                echo "Subject: 🚨 Build Failed in CircleCI"
+                echo "Subject: Ejecución de build ha fallado en CircleCI"
                 echo "From: no-reply@circleci.com"
                 echo "To: anfe-97@hotmail.com"
                 echo ""
