--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,18 +24,17 @@ jobs:
             echo 'echo "$suma"' >> script.sh
             chmod +x script.sh 
       - run:
-          name: Ejecutar Build y enviar correo si falla
+          name: Configurar msmtp
           command: |
-            if ! ./script.sh; then
-              {
-                echo "Subject: Ejecución de build ha fallado en CircleCI"
-                echo "From: no-reply@circleci.com"
-                echo "To: anfe-97@hotmail.com"
-                echo ""
-                echo "El proceso de Build ha fallado en CircleCI."
-              } | sendmail -t
-              exit 1
-            fi
+            echo "account default" > ~/.msmtprc
+            echo "host smtp.office365.com" >> ~/.msmtprc  # Para Hotmail/Outlook
+            echo "port 587" >> ~/.msmtprc
+            echo "auth on" >> ~/.msmtprc
+            echo "user anfe-97@hotmail.com" >> ~/.msmtprc
+            echo "password $SMTP_PASSWORD" >> ~/.msmtprc
+            echo "tls on" >> ~/.msmtprc
+            echo "tls_starttls on" >> ~/.msmtprc
+            chmod 600 ~/.msmtprc
       - persist_to_workspace:
           root: .
           paths:
@@ -64,18 +63,17 @@ jobs:
             echo "  [ \"\$result\" = '5' ]" >> test_script.bats
             echo "}" >> test_script.bats
       - run:
-          name: Ejecutar Build y enviar correo si falla
+          name: Configurar msmtp
           command: |
-            if ! ./script.sh; then
-              {
-                echo "Subject: Ejecución de build ha fallado en CircleCI"
-                echo "From: no-reply@circleci.com"
-                echo "To: anfe-97@hotmail.com"
-                echo ""
-                echo "El proceso de Build ha fallado en CircleCI."
-              } | sendmail -t
-              exit 1
-            fi
+            echo "account default" > ~/.msmtprc
+            echo "host smtp.office365.com" >> ~/.msmtprc  # Para Hotmail/Outlook
+            echo "port 587" >> ~/.msmtprc
+            echo "auth on" >> ~/.msmtprc
+            echo "user anfe-97@hotmail.com" >> ~/.msmtprc
+            echo "password $SMTP_PASSWORD" >> ~/.msmtprc
+            echo "tls on" >> ~/.msmtprc
+            echo "tls_starttls on" >> ~/.msmtprc
+            chmod 600 ~/.msmtprc
       - run:
           name: Ejecutar test
           command: bats test_script.bats
